<resources>
    <string name="app_name">Event Planner</string>
    <string name="title_event">Event</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="event">Event</string>
    <string name="desc">Descriptions</string>
    <string name="save">Save</string>
    <string name="pick">Date</string>
    <string name="sample">15/11/20</string>
    <string name="add">Add Event</string>
    <string name="choose_image">Choose Image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Create Account</string>
    <string name="name">Name</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="required_field">All Field is Required</string>
    <string name="toastLoginSuccess">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="event_saved">Event Saved</string>
    <string name="logout">Logout</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reminder">Reminder</string>
    <string name="permission">We need your camera and storage permission to add your photo.</string>
    <string name="ok">Ok</string>
    <string name="cam">Camera</string>
    <string name="pick_img">Pick Image From</string>
    <string name="cam_per">Camera Permission Required</string>
    <string name="str_per">Storage Permission Required</string>
    <string name="my_event">My Event</string>
    <string name="quote">Quote</string>
    <string name="add_ppl">Add People</string>
    <string name="con_wifi">Please Connect to Wifi</string>
    <string name="fail_con">Failed to Show Quote. Check Your Connection to Fix It</string>
</resources>