<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_event">

    <fragment
        android:id="@+id/navigation_event"
        android:name="id.ac.ui.cs.mobileprogramming.rindusalsabilla.eventplanner.ui.event.EventListFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="id.ac.ui.cs.mobileprogramming.rindusalsabilla.eventplanner.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="id.ac.ui.cs.mobileprogramming.rindusalsabilla.eventplanner.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>