<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.event.AddEventActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="372dp">


        <EditText
            android:id="@+id/edit_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/event"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_event"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/desc"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_due_date"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/edit_desc"
            android:layout_marginTop="15dp"
            android:text="@string/pick"
            android:textAllCaps="false"
            android:textSize="12sp" />


    </RelativeLayout>

</LinearLayout>